--- a/sass/blocks/_stock-form-field.sass
+++ b/sass/blocks/_stock-form-field.sass
@@ -19,28 +19,29 @@ $block: ".stock-form-field"
   display: block
   width: 100%
 
+  // $Common form field MOD: role control
   &_role_control
     display: flex
     flex-direction: row
     justify-content: flex-start
     align-items: center
 
+  // $Common form field MOD: role control reversed
   &_role_control-reverse
     display: flex
     flex-direction: row-reverse
     justify-content: flex-end
     align-items: center
 
+  // $Common form field MOD: state error
   &_state_error
 
+  // $Common form field MOD: no top label
   &_no-label
     padding-top: 20px
 
+  // $Common form field MOD: size small
   &_size_s
-
-  &_state_hidden-mobile
-    @media screen and (max-width: 960px)
-      display: none
 
 
   // $Common form field label
@@ -70,6 +71,7 @@ $block: ".stock-form-field"
     #{$block}_role_control-reverse &
       margin-left: 10px
 
+    // $Common form field label text CONTEXT: $Common form MOD: context table
     #{$block}_context_table &
       flex-shrink: 1
       font-size: 12px
@@ -95,11 +97,13 @@ $block: ".stock-form-field"
   &__input
     position: relative
 
+    // $Common form field input CONTEXT: $Common form MOD: role control
     #{$block}_role_control &,
     #{$block}_role_control-reverse &
       flex-grow: 1
       flex-shrink: 1
 
+    // $Common form field input CONTEXT: $Common form MOD: context table
     #{$block}_context_table &
       flex-grow: 0
       flex-shrink: 0
@@ -161,17 +165,16 @@ $block: ".stock-form-field"
         padding: 8px 10px
         font-size: 12px
 
+      #{$block}_state_error &
+        border-color: #ed7f7e
+        color: #ed7f7e
+
       @media screen and (max-width: 960px)
         #{$block}_size_s &
           width: 100%
 
       &:focus
         outline: none
-
-      // $Common form field input CONTEXT: $Common form field state error
-      #{$block}_state_error &
-        border-color: #ed7f7e
-        color: #ed7f7e
 
 
   // $Common form field note
